# logiops

./: CMakeLists.txt  logid.example.cfg
.github/workflows/: build-test.yml
src/logid/: CMakeLists.txt
src/logid/actions/gesture/: IntervalGesture.cpp  IntervalGesture.h
src/logid/config/: schema.h
src/logid/tests/: CMakeLists.txt  interval_gesture_config_test.cpp
